dropshot/tests/fail/bad_channel25.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_channel25.rs:25:1
   |
25 | / async fn weird_types<'a>(
26 | |     _rqctx: RequestContext<T, Self::U>,
27 | |     _param1: Query<&'a QueryParams>,
28 | |     _param2: for<'b> TypedBody<&'b ()>,
29 | | ) -> Result<impl HttpResponse, HttpError> {
   | |_________________________________________^

error: endpoint `weird_types` must not have generics
  --> tests/fail/bad_channel25.rs:25:21
   |
25 | async fn weird_types<'a>(
   |                     ^^^^

error: endpoint `weird_types` must accept a RequestContext<T> as its first argument
  --> tests/fail/bad_channel25.rs:26:13
   |
26 |     _rqctx: RequestContext<T, Self::U>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: endpoint `weird_types` must not have lifetime parameters in extractor
  --> tests/fail/bad_channel25.rs:27:21
   |
27 |     _param1: Query<&'a QueryParams>,
   |                     ^^
